tests/ui/half-open-range-patterns/half-open-range-pats-thir-lower-empty.stderr
error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:11:11
   |
LL |     m!(0, ..u8::MIN);
   |           ^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:42:13
   |
LL |     m!('a', ..'\u{0}');
   |             ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0579`.
